--- a/src/App.css
+++ b/src/App.css
@@ -7,26 +7,39 @@
 }
 
 .circularProgress {
-  width: 250px;
+  width: 400px;
   position: absolute;
-  top: 15%;
+  top: 10%;
 }
 
 .timeInput {
-  position: relative;
+  opacity: 0;
+  position: absolute;
+  top: 35%;
   margin: 0 auto;
-  margin-top: -25px;
-  margin-bottom: 25px;
+  /* margin-top: -10px;
+  margin-bottom: 25px; */
   direction: rtl;
   width: 150px;
   height: 50px;
   font-size: 35px;
+
+  /* remove borders */
+  border: 0;
+  outline: 0;
+  border-bottom: 12px solid cyan;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 .buttonGroup {
   display: flex;
   flex-direction: column;
   align-content: center;
-  position: absolute;
-  top: 65%;
+  position: relative;
+  margin-top: 75vh;
 }
